# vitap_student_app

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  analysis_options.yaml  announcements.json  flutter_native_splash.yaml  pubspec.yaml
.idx/: dev.nix
android/: build.gradle  settings.gradle
android/app/: build.gradle
docs/: privacy_policy.md
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: CHANGELOG.md  firebase_options.dart  init_dependencies.dart  init_dependencies.main.dart  main.dart  objbox.dart  objectbox-model.json  objectbox.g.dart
linux/: CMakeLists.txt  pubspec.yaml
rust/: .gitignore  Cargo.toml
rust/src/: dryrun.rs  frb_generated.rs
rust/src/api/: vtop_get_client.rs
rust/src/api/vtop/: captcha_solver.rs  mod.rs  session_manager.rs  vtop_client.rs  vtop_config.rs  vtop_errors.rs  wifi.rs
rust/src/api/vtop/client/: academic.rs  auth.rs  biometric.rs  builder.rs  faculty.rs  hostel.rs  mod.rs  payment.rs  profile.rs
rust/src/api/vtop/parser/: attendance_parser.rs  course_page_parser.rs  digital_assignment_parser.rs  marks_parser.rs  mod.rs  outing_response_parser.rs  parseattn.rs  parsegradehistory.rs  parsemarks.rs  parseprofile.rs  parsesched.rs  parsett.rs  pending_payments_parser.rs  timetable_parser.rs
rust/src/api/vtop/parser/hostel/: mod.rs  parseleave.rs  parseoutings.rs  weekend_outing_parser.rs
rust/src/api/vtop/types/: attendance.rs  comprehensive_data.rs  digital_assignment.rs  exam_schedule.rs  grade_history.rs  hostel.rs  marks.rs  mod.rs  timetable.rs  weekend_outing.rs
rust_builder/: pubspec.yaml
vit_ap_student_app/: .gitignore  README.md  firebase.json  flutter_native_splash.yaml  pubspec.yaml
windows/: CMakeLists.txt
(+650 files in other folders)
